[package]
name = "lcd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "*"
chrono = "*"
env_logger = "*"
futures = "*"
http = "*"
lazy_static = "1.4"
log = "0.4.14"
log4rs = "1.0"
regex = "*"
reqwest = {version = "0.12.2", features = ["json"]}
rand = "*"
serde = "*"
serde_json = "*"
serde_urlencoded = "*"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]
